force-app/main/default/objects/Exam__c/fields/Assign_Class__c.field-meta.xml
<CustomField>
    <fullName>Assign_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Class</label>
    <referenceTo>Assign_Classes__c</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>