force-app/main/default/objects/Exam__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>IF(Percentage__c &lt; 33, &apos;Fail&apos;,
   IF(Percentage__c &lt; 45, &apos;Third Division&apos;,
      IF(Percentage__c &lt; 60, &apos;Second Division&apos;, &apos;First Division&apos;)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>