force-app/main/default/objects/Exam__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type&apos;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Test</fullName>
            </value>
            <value>
                <fullName>Second Test</fullName>
            </value>
            <value>
                <fullName>Third Test</fullName>
            </value>
            <value>
                <fullName>Half Yearly Exam</fullName>
            </value>
            <value>
                <fullName>Yearly Exam</fullName>
            </value>
            <value>
                <fullName>Forth Test</fullName>
            </value>
            <value>
                <fullName>Fifth Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>