force-app/main/default/objects/Exam__c/fields/Is_Publish__c.field-meta.xml
<CustomField>
    <fullName>Is_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Publish?</label>
    <type>Checkbox</type>
</CustomField>