force-app/main/default/objects/Exam__c/fields/Obtain_Marks__c.field-meta.xml
<CustomField>
    <fullName>Obtain_Marks__c</fullName>
    <label>Obtain Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>