force-app/main/default/objects/Exam__c/fields/Out_of__c.field-meta.xml
<CustomField>
    <fullName>Out_of__c</fullName>
    <label>Out of</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>