force-app/main/default/objects/Exam__c/fields/Store_Student_Marks_Data__c.field-meta.xml
<CustomField>
    <fullName>Store_Student_Marks_Data__c</fullName>
    <label>Store Student Marks Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>