force-app/main/default/objects/Exam__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>20</length>
    <type>Text</type>
</CustomField>