force-app/main/default/objects/Exam__c/fields/Total_Obtain_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Obtain_Marks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Obtain Marks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>