force-app/main/default/objects/Exam__c/fields/Total_Outof_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Outof_Marks__c</fullName>
    <label>Total Outof Marks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>